--- a/myBlogWeb/templates/blog_detail.html
+++ b/myBlogWeb/templates/blog_detail.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/api_documment_css/style.css">
     <link rel="stylesheet" href="/static/css/markdown.css">
     <link rel="stylesheet" href="/static/api_documment_css/prettify.css">
+    <link rel="stylesheet" href="/static/css/menu.css">
 </head>
 
 <body>
@@ -39,12 +40,12 @@
         </header>
         <section>
             <div class="container">
-                <div class="docs-content markdown" id="result">
+                <div class="docs-content markdown markdown-body editormd-preview-container" id="result">
                     <!-- 此处插入内容 -->
                 </div>
-                <ul class="docs-nav" id="menu-left">
+                <ul class="docs-nav my_menu" id="menu-left">
                     <li><strong>目录</strong></li>
-                    <li class="separator"></li>
+                    <!-- <li class="separator"></li> -->
                     <!-- <li><strong>API参考</strong></li>
                 <li><a href="#welcome" class=" ">简介</a></li>
                 <li><a href="#requires" class=" ">Requires</a></li>
