--- a/myBlogWeb/static/api_documment_css/style.css
+++ b/myBlogWeb/static/api_documment_css/style.css
@@ -145,7 +145,7 @@ a:active {
 header {
     padding: 2em 0 2em 0;
     text-align: center;
-    background: #26abe2;
+    background: white;
     color: #fff;
 }
 
@@ -180,7 +180,7 @@ footer p {
 
 /* Navigation Styles */
 nav {
-    background: #135571;
+    background: white;
     padding: 2px 0;
     min-height: 60px;
 }
@@ -383,6 +383,7 @@ input:focus {
     }
 
     header {
+        margin-top: 1.767rem;
         height: 60px;
         padding: 2em 0 2em 0;
     }
