--- a/myBlogWeb/static/api_documment_css/style.css
+++ b/myBlogWeb/static/api_documment_css/style.css
@@ -143,7 +143,7 @@ a:active {
 
 /* Header Styles */
 header {
-    padding: 2em 0 2em 0;
+    /* padding: 2em 0 2em 0; */
     text-align: center;
     background: white;
     color: #fff;
@@ -209,7 +209,7 @@ nav h1 a {
 }
 
 nav a:hover {
-    background: #195974;
+    background: #b9bcbd;
     text-decoration: none;
 }
 
@@ -325,7 +325,7 @@ input:focus {
 .docs-nav {
     background-color: #f5f5f5;
     list-style: none;
-    margin: 0 0 0 20px;
+    /* margin: 0 0 0 20px; */
     padding: 15px 20px;
     font-size: 0.97em;
 }
@@ -349,7 +349,6 @@ input:focus {
 @media only screen and (min-width: 960px) {
     .docs-nav {
         position: absolute;
-        top: 0;
         width: 220px;
 
         -webkit-transition: top linear 50ms;
@@ -379,13 +378,13 @@ input:focus {
     }
 
     .docs-content {
-        padding-left: 310px;
+        /* padding-left: 310px; */
     }
 
     header {
         margin-top: 1.767rem;
-        height: 60px;
-        padding: 2em 0 2em 0;
+        /* height: 60px; */
+        /* padding: 2em 0 2em 0; */
     }
 
     .container {
