--- a/myBlogWeb/static/css/menu.css
+++ b/myBlogWeb/static/css/menu.css
@@ -1,3 +1,11 @@
+.my_menu {
+    background-color: #f4f5f5;
+    width: 150px;
+    margin-top: 30px;
+    /* z-index: 999999; */
+    /* position: fixed; */
+}
+
 .my_menu h1 {
     border-bottom: 1px solid #EFEAEA;
     line-height: 25px;
@@ -38,11 +46,4 @@
     line-height: 25px;
     font-size: 8px;
     color: black;
-}
-
-.my_title {
-    font-family: Georgia, Palatino, serif;
-    color: black;
-    font-weight: normal;
-    font-size: 45px;
 }
