--- a/myBlogWeb/templates/blog_detail.html
+++ b/myBlogWeb/templates/blog_detail.html
@@ -30,7 +30,7 @@
                 </a>
                 <div id="menu">
                     <ul class="layui-nav" lay-filter="">
-                        <li class="layui-nav-item"><a href="" style="color: grey;">首页</a></li>
+                        <li class="layui-nav-item"><a href="/" style="color: grey;">首页</a></li>
                     </ul>
                     <ul class="layui-nav layui-layout-right" style="background-color: white; margin-top: 10px;">
                         <li>
