--- a/myBlogCMS/templates/blog_list.html
+++ b/myBlogCMS/templates/blog_list.html
@@ -46,7 +46,7 @@
                     </button>
                 </div>
                 <div id="after_filter" style="display: none;float: right">
-                    <input type="text" style="display: none" id="blog_sort_by" value="id">
+                    <input type="text" style="display: none" id="blog_sort_by" value="update_time">
                     <label>分类: </label>
                     <select name="blog_category" id="blog_category"
                             style="margin-right: 10px;line-height: 44px;height: 24px;">
