--- a/myBlogCMS/templates/category_list.html
+++ b/myBlogCMS/templates/category_list.html
@@ -41,11 +41,13 @@
                             <col>
                             <col>
                             <col>
+                            <col>
                         </colgroup>
                         <thead>
                         <tr>
                             <th>id</th>
                             <th>category</th>
+                            <th>tags</th>
                             <th>blog_count</th>
                             <th>操作</th>
                         </tr>
