--- a/myBlogWeb/templates/index.html
+++ b/myBlogWeb/templates/index.html
@@ -115,7 +115,7 @@
                                                 {[item.category]}
                                             </li>
                                             <li class='tag' v-for="tag in item.tag.split(',')">
-                                                {[tag]}
+                                                ·{[tag]}
                                             </li>
                                         </ul>
                                     </div>
@@ -125,7 +125,7 @@
                                         </a>
                                     </div>
                                     <div class="content-row">
-                                        <div class="cover-img"><img :src="item.cover_img_url" alt=""></div>
+                                        <div class="cover-img"><img :src="item.cover_img_url + '&width=200&height=125'" alt=""></div>
                                         <div class="content">{[getContent(item.content)]}</div>
                                     </div>
                                     <div>
