--- a/myBlogWeb/static/css/myblog.css
+++ b/myBlogWeb/static/css/myblog.css
@@ -143,7 +143,7 @@
 
 .my-blog .content-row .content{
     width: 400px;
-    height: 100px;
+    height: 100%;
     float: left;
     /* max-height: 100px;
     text-overflow: ellipsis;
