--- a/myBlogWeb/templates/index.html
+++ b/myBlogWeb/templates/index.html
@@ -125,7 +125,7 @@
                                         </a>
                                     </div>
                                     <div class="content-row">
-                                        <div class="cover-img"><img :src="item.cover_img_url + '&width=200&height=125'" alt=""></div>
+                                        <div class="cover-img"><img :src="item.cover_img_url" alt=""></div>
                                         <div class="content">{[getContent(item.content)]}</div>
                                     </div>
                                     <div>
